--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,9 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>details</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+<ion-card *ngIf="data">
+  <ion-card-header>
+    <ion-card-title>
+      {{ data.title }}
+    </ion-card-title>
+    <ion-card-subtitle>
+        {{ data.subtitle }}
+    </ion-card-subtitle>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-item *ngFor="let item of data.items">
+      {{ item }}
+    </ion-item>
+  </ion-card-content>
+</ion-card>
 </ion-content>
