--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Ionic Data Navigation
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content padding>
+    <ion-button expand="full" (click)="openDetailsWithService()">
+    Open with Service
+  </ion-button>
 </ion-content>
